I added the option of modifying tracks and keywords. It updates accordingly the mp3 tags in the files.